Added the following functionality: "Return all articles (from all users) that contains the given tag(s) (1 or more)"
