# app/routes/article.routes.js
@@ -1,3 +1,4 @@
+const Joi = require('joi');
 const validate = require('express-validation');
 const articleValidationSchema = require('../models/article.schema');
 
@@ -9,6 +10,12 @@ module.exports = (app) => {
     app.put('/articles/:articleId', validate(articleValidationSchema), articleController.update);
 
     app.delete('/articles/:articleId', articleController.delete);
+
+	app.get('/articles/byTags/:tags', validate({
+		params: {
+			tags: Joi.string().required()	// undefined, null or empty strings will be rejected
+		}
+	}), articleController.findAllArticlesContainingTags);
 
 	app.get('/articles', articleController.findAll);
 };
